--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inv.Tech</title>
-    <link href="/assents/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assents/css/style.css">
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/assents/images/imagem_2024-06-26_214831793-removebg-preview.png" type="image/x-icon">
 </head>
 <body>
