--- a/index.html
+++ b/index.html
@@ -126,13 +126,48 @@
             </table>
         </section>
         <section class="resumo">
-            <h2>Resumo dos Investimentos</h2>
-            <div class="card">
-                <div class="card-body">
-                    <p>Total Investido: R$ 50.000,00</p>
-                    <p>Retorno Atual: R$ 55.000,00</p>
-                </div>
-            </div>
+            <h2>Historico de Compras</h2>
+            <table class="table table-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Investimento</th>
+                        <th>Data/2024</th>
+                        <th>Valor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>MXRF11.</td>
+                        <td>28/06</td>
+                        <td>R$ 121,24</td>
+                    </tr>
+                    <tr>
+                        <td>MXRF11.</td>
+                        <td>27/06</td>
+                        <td>R$ 125,00</td>
+                    </tr>
+                    <tr>
+                        <td>MXRF11.</td>
+                        <td>24/06</td>
+                        <td>R$ 610,00</td>
+                    </tr>
+                    <tr>
+                        <td>XPML11.</td>
+                        <td>23/06</td>
+                        <td>R$ 31,10</td>
+                    </tr>
+                    <tr>
+                        <td>XPML11.</td>
+                        <td>19/06</td>
+                        <td>R$ 25,00</td>
+                    </tr>
+                    <tr>
+                        <td>BCFF11.</td>
+                        <td>28/05</td>
+                        <td>R$ 65,00</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
     </main>
 
