--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Inv.Tech</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="icon.png" type="image/x-icon">
+    <link rel="icon" href="imgs/icon.png" type="image/x-icon">
 </head>
 <body>
     <header class=" text-white text-center py-3">
